--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+@media only screen and (max-width: 600px) {
+  .pointsMobileClass{
+    padding:"0px";
+    margin:"0px";
+    background-color:"#ffffff!important";
+  }
+}
+
